--- a/src/styles/pages/contact/contact.css
+++ b/src/styles/pages/contact/contact.css
@@ -1,10 +1,14 @@
 @layer pages {
   .contact-form {
-    padding: var(--pad-2xl) 0;
-    border-bottom: 1px solid var(--color-border);
-    border-top: 1px solid var(--color-border);
+    padding: var(--pad-xl) 0;
+    margin-bottom: 0;
+
     & label {
       font-size: var(--text-lg);
+    }
+
+    & .btn {
+      padding: var(--pad-sm);
     }
   }
 
@@ -17,6 +21,5 @@
 
   .contact-success-message {
     font-size: var(--text-xl);
-    width: 20ch;
   }
 }
